--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -4,6 +4,9 @@ Release 5.0-BETA8
 * conscrypt-openjdk-uber 1.4.1 -> 1.4.2.
   Contributed by Gary Gregory <garydgregory at gmail.com>
 
+* Provide more information when a BindException occurs.
+  Contributed by Gary Gregory <garydgregory at gmail.com>
+
 
 Release 5.0-BETA7
 -------------------
