--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -5,6 +5,8 @@ This BETA fixes a number of defects found since the last release.
 
 * HTTPCORE-618: org.apache.hc.core5.http.HttpStatus should be a class, not an interface.
 
+* HTTPCORE-619: org.apache.hc.core5.reactor.EventMask should be a class, not an interface.
+
 Release 5.0-BETA10
 -------------------
 
